# takoyaki

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  gen.bat  open.bat
.github/workflows/: build.yml
cmake/: compiler_features.cmake  compiler_warnings.cmake  cotire.cmake  glfw.cmake  glm.cmake  googletest.cmake  imgui.cmake  thirdparty.cmake
glad/: CMakeLists.txt
scripts/: build.bat  clean.bat  format  gen  gen.bat  open.bat
serializer_lib/: CMakeLists.txt
serializer_lib/src/: dummy.cpp
serializer_lib/src/serializer/: Buffer.h  Serializer.h
serializer_tests/: CMakeLists.txt
serializer_tests/src/: SerializerTests.cpp  main.cpp
takoyaki/: CMakeLists.txt
takoyaki/src/: main.cpp  precompiled.h
takoyaki/src/editor/: MainEditor.cpp  MainEditor.h  ServiceManager.cpp  ServiceManager.h  Takoyaki.cpp  Takoyaki.h
takoyaki/src/editor/components/: Camera.cpp  Camera.h  DockSpace.cpp  DockSpace.h  Preview.cpp  Preview.h  UniformItem.h  UniformsMenu.cpp  UniformsMenu.h  Widget.cpp  Widget.h
takoyaki/src/editor/components/Animator/: AnimationTrack.cpp  AnimationTrack.h  Animator.cpp  Animator.h
takoyaki/src/editor/components/Timeline/: Timeline.cpp  Timeline.h
takoyaki/src/editor/handlers/: Handlers.h
takoyaki/src/editor/systems/animator/: AnimationSystem.cpp  AnimationSystem.h  AnimationTrack.h
takoyaki/src/editor/systems/music/: MusicSystem.cpp  MusicSystem.h
takoyaki/src/editor/systems/sync/: SyncSystem.cpp  SyncSystem.h
takoyaki/src/graphics/: BaseWindow.h  Commands.h  MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h  Shader.h  ShaderProgram.h  Window.cpp  Window.h
takoyaki/src/graphics/gl/: RenderCommand.h  RenderCommands.h  RenderTarget.cpp  RenderTarget.h
takoyaki/src/util/: FileWatcher.cpp  FileWatcher.h  KeyInput.h  glmvecToImVec.h
takoyaki_app/: CMakeLists.txt
takoyaki_app/src/: main.cpp
takoyaki_lib/: CMakeLists.txt
takoyaki_lib/src/takoyaki/: TakoyakiApp.cpp  TakoyakiApp.h  precompiled.h
takoyaki_lib/src/takoyaki/editor/: MainEditor.cpp  MainEditor.h  ServiceManager.cpp  ServiceManager.h  Takoyaki.cpp  Takoyaki.h
takoyaki_lib/src/takoyaki/editor/components/: Camera.cpp  Camera.h  Exporter.cpp  Exporter.h  Preview.cpp  Preview.h  UniformItem.h  UniformsMenu.cpp
takoyaki_lib/src/takoyaki/editor/components/Animator/: Animator.cpp  Animator.h
takoyaki_lib/src/takoyaki/editor/components/Timeline/: Timeline.cpp
takoyaki_lib/src/takoyaki/editor/handlers/: Handlers.h
takoyaki_lib/src/takoyaki/editor/systems/animator/: AnimationSystem.cpp  AnimationSystem.h  AnimationTrack.cpp  AnimationTrack.h  Easings.cpp  Easings.h  KeyFrameList.cpp  KeyFrameList.h
takoyaki_lib/src/takoyaki/editor/systems/music/: MusicSystem.cpp
takoyaki_lib/src/takoyaki/editor/systems/project/: FileLocator.cpp  FileLocator.h  ProjectSystem.cpp  ProjectSystem.h
takoyaki_lib/src/takoyaki/editor/systems/scene/: SceneSystem.cpp  SceneSystem.h
takoyaki_lib/src/takoyaki/editor/systems/sync/: SyncSystem.cpp
takoyaki_lib/src/takoyaki/graphics/: BaseWindow.h  MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h
takoyaki_lib/src/takoyaki/graphics/gl/: RenderCommand.h  RenderTarget.cpp  RenderTarget.h  Shader.h  ShaderProgram.h
takoyaki_lib/src/takoyaki/util/: FileWatcher.cpp  FileWatcher.h  Input.h  VariantPolyfill.h
takoyaki_tests/: CMakeLists.txt
takoyaki_tests/src/: EasingsTests.cpp  KeyFrameListTests.cpp
